--- a/css/my-css.css
+++ b/css/my-css.css
@@ -14,3 +14,9 @@ body {background-color: rgb(50, 132, 209);}
     width: 100%;
     height: 2.5rem;
 }
+
+.responsive_images {
+    
+    width: 10%;
+    height: auto;
+}
