--- a/css/my-css.css
+++ b/css/my-css.css
@@ -7,7 +7,7 @@ header {background-image: url("https://www.publicdomainpictures.net/pictures/330
     background-repeat: no-repeat;
     background-size: cover;
     height: 800px;}
-body {background-color: rgb(50, 132, 209);}
+body {background-color: #3894f4;}
 #footer {
     position: absolute;
     bottom: 0;
